Correct the overflows of home and navbar

--- a/frontend/src/Assets/css/Navbar/Navbar.module.css
+++ b/frontend/src/Assets/css/Navbar/Navbar.module.css
@@ -10,7 +10,7 @@ body{
     /* overflow: hidden; */
     text-align: right;
     box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
-    left: 69px;
+    left: 68px;
     z-index: 1;
 }
 
