--- a/frontend/src/Assets/css/Portfolio/Portfolio.module.css
+++ b/frontend/src/Assets/css/Portfolio/Portfolio.module.css
@@ -88,7 +88,7 @@ h5 {
   line-height: 1.5;
   color: #1f2c73;
 }
-.card Popup{
+.card Popup {
   position: relative;
   left: 5em;
   top: 5em;
@@ -128,10 +128,10 @@ sub {
 .clr4 {
   color: var(--bs-blue);
 }
-#Pl_btn:hover{
+#Pl_btn:hover {
   color: #0095eb;
 }
-#Pl_btn{
+#Pl_btn {
   color: #005687;
   font-size: 1em;
   cursor: pointer;
@@ -150,26 +150,24 @@ sub {
   display: block;
   top: 13em;
   border-radius: 17px;
-  left: 12em;
+  left: 10em;
   margin-bottom: 100px;
   min-height: 33em;
   width: -moz-fit-content;
-  width: 77em;
+  width: 81em;
   background-color: white;
   box-shadow: 0 19px 38px rgb(0 0 0 / 14%), 0 15px 12px rgb(0 0 0 / 6%);
-
 }
 table {
   border: 2px solid rgba(0, 0, 0, 0.371);
   width: 72em;
-  left: 2.5em;
+  left: 1em;
   text-align: center;
-  top: 1em;
+  top: 3em;
   /* border-radius: 13px; */
   position: relative;
   /* height: -moz-fit-content; */
   height: fit-content;
-
 }
 tr {
   border-color: inherit;
@@ -187,28 +185,33 @@ th {
 td {
   text-align: center;
 }
-td img {
-  width: 3em;
+.tdimg img {
+  width: 56px;
+  height: 49px;
   position: relative;
-  right: 4em;
+  top: 9px;
+  right: 0.5em;
 }
-td a:hover{
+td a:hover {
   color: var(--bs-blue);
 }
-td a{
+td a {
   text-decoration: none;
   color: black;
-
 }
-.sec_cat{
+td span {
+  left: 1.1em;
+  position: relative;
+  bottom: 0.8em;
+}
+.sec_cat {
   position: relative;
   left: 2.5em;
   top: 1em;
 }
-.sec_cat p{
+.sec_cat p {
   font-size: 1.1em;
-  font-family: 'Prompt', sans-serif;
-
+  font-family: "Prompt", sans-serif;
 }
 .popup-content {
   position: relative;
@@ -216,10 +219,10 @@ td a{
   top: 5em;
 }
 /* chart */
-#portGraph{
+#portGraph {
   display: none;
 }
-.container3{
+.container3 {
   position: absolute;
   top: 12em;
   display: flex;
@@ -228,20 +231,20 @@ td a{
   left: 19em;
   height: 28em;
   border-radius: 10px;
-  box-shadow: 0 19px 38px rgba(14, 14, 14, 0.14), 0 15px 12px rgba(0, 0, 0, 0.06);
-
+  box-shadow: 0 19px 38px rgba(14, 14, 14, 0.14),
+    0 15px 12px rgba(0, 0, 0, 0.06);
 }
-.chartDetails{
+.chartDetails {
   position: relative;
 }
-.chart{
+.chart {
   width: 49em;
   /* height: 23em; */
   left: 2em;
   top: 0.1em;
   position: relative;
 }
-.headChart{
+.headChart {
   position: relative;
   /* text-align: center; */
   /* align-items: center; */
@@ -249,30 +252,30 @@ td a{
   font-size: 1.2em;
   top: 1em;
 }
-.cbox{
+.cbox {
   position: relative;
   left: 1.2em;
   top: 2em;
   margin: 9px 0px;
 }
-.thisMonth{
+.thisMonth {
   color: #ffffff9c;
   font-size: 20px;
   padding-bottom: 16px;
-  font-family: Roboto,sans-serif;
+  font-family: Roboto, sans-serif;
 }
-.cbox h5{
+.cbox h5 {
   color: rgb(255 244 244 / 78%);
   font: var(--bs-font-sans-serif);
   font-size: 1.2rem;
 }
-.cbox1 h5{
+.cbox1 h5 {
   color: red;
 }
-.cbox2 h5{
+.cbox2 h5 {
   color: green;
 }
-.chartBtn{
+.chartBtn {
   text-decoration: none;
   /* background-color: #0095eb; */
   color: var(--bs-blue);
@@ -284,11 +287,11 @@ td a{
   display: inline-block;
   font-size: 1.2em;
 }
-.chartBtn:hover{
+.chartBtn:hover {
   /* background-color: #0095ebd1; */
   color: #0095ebbf;
 }
-.histImg{
+.histImg {
   left: 1.9em;
   position: relative;
 }
